Archive2/21/81d70d92d7d084/main.cpp
int main(){
    struct {int x;} a; struct {int x;} b; a = b;.
}